--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
-github_username:  JoMingyu
+github_username: JoMingyu
+linkedin_username: mingyu-jo-9b538a170
 
 # Build settings
 theme: minima
