--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
-google_analytics: G-0L67RSLG65
+analytics:
+  provider               : "google"
+  google:
+    tracking_id          : "G-0L67RSLG65"
+    anonymize_ip         : true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
